--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 asgiref==3.6.0
+beautifulsoup4==4.12.2
 Django==4.2.1
+django-browser-reload==1.8.0
+django-livereload-server==0.4
+six==1.16.0
+soupsieve==2.4.1
 sqlparse==0.4.4
+tornado==6.3.2
 tzdata==2023.3
